[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.1",
    "langsmith>=0.4.4",
    "python-dotenv>=1.1.1",
]
